[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ff14hub"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "rich>=15.0",
    "python-library-ff14-the-hunt>=0.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[tool.setuptools]
packages = []
