[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ff14hub"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "colorlog>=6.0",
    "colorama>=0.4.6",
    "rich>=15.0",
    "python-library-ff14-the-hunt>=0.0.4",
    "python-library-ff14-news>=0.0.2",
    "python-library-onebot-protocol==0.2.0",
    "python-library-configlib>=0.1.5",
    "pydantic>=2.0",
    "textual-image>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[tool.setuptools]
packages = []
